# rutgers_arm

./: README.md  prx_doc_light  rosdep.yaml  stack.xml
prx_build/.CatkinBuildFiles/learn/: CMakeLists.txt
prx_build/.CatkinBuildFiles/viz/: CMakeLists.txt
prx_external/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
prx_external/PQP/: PQP.cpp  PQP_Internal.h
prx_external/clipper/: clipper.cpp  clipper.hpp
prx_external/parallel_pqp/: CUDACollisionCheck.cpp  CUDACollisionCheck.h  CUDACollisionCheckKernels.cu  CUDACollisionCheckKernels.h  PlanningParams.h  cuda_defs.h  cuda_errorcheck.h  cuda_rrt_types.h  cuda_stateIntersect.h  cuda_statePrimitives.h  cuda_timing.h
prx_external/parallel_pqp/PQP/: PQP.cpp  PQP_Compile.h  PQP_Internal.h
prx_external/parallel_pqp/collision/: cuda_intersect_nodes.h  cuda_intersect_tree.h  cuda_intersect_tritri.h  cuda_obb.cu  cuda_obb.h  cuda_robobs.cu  cuda_robobs.h  cuda_transform.h  cuda_vectors.h  cuda_vertex.h  defs.h
prx_input/: README.md  (+1 more)
prx_learn/: README.md  package.xml
prx_learn/data/toy_car/: toy_car_max.binaryproto  toy_car_mean.binaryproto  toy_car_min.binaryproto
prx_learn/models/toy_car/: 2fc_iter_20001.caffemodel  toycar_2fc_deploy.prototxt
prx_learn/prx/: network_t.hpp
prx_learn/prx/applications/: data_publisher.cpp  forward_toy_car.cpp
prx_learn/prx/learn/: forward_car.cpp  forward_car.hpp
prx_planning/: CMakeLists.txt  manifest.xml  package.xml  planning_plugin.xml
prx_planning/action/: apc_query.action  parallel_prop.action
prx_planning/prx/: experiment.cpp  main.cpp
prx_planning/prx/planning/: planner.cpp  planner.hpp  world_model.cpp  world_model.hpp
prx_planning/prx/planning/applications/: ground_truth_query_application.cpp  planning_application.cpp  replanning_application.cpp  replanning_application.hpp  single_query_application.cpp
prx_planning/prx/planning/communication/: planning_comm.cpp  visualization_comm.cpp
prx_planning/prx/planning/modules/heuristic_search/: constraints_astar_search.cpp  constraints_astar_search.hpp
prx_planning/prx/planning/modules/local_planners/: bvp_local_planner.cpp  bvp_local_planner.hpp  time_varying_local_planner.cpp
prx_planning/prx/planning/modules/path_smoothers/: path_smoother.cpp  path_smoother.hpp  shortcut_smoother.hpp
prx_planning/prx/planning/modules/samplers/: rally_car_sampler.cpp  rally_car_sampler.hpp  restricted_normals_sampler.cpp  restricted_normals_sampler.hpp  sampler.hpp
prx_planning/prx/planning/modules/stopping_criteria/: stopping_criteria.cpp
prx_planning/prx/planning/modules/validity_checkers/: ignore_list_validity_checker.cpp  ignore_list_validity_checker.hpp  temporal_validity_checker.cpp  validity_checker.cpp  validity_checker.hpp  world_model_validity_checker.cpp
prx_planning/prx/planning/motion_planners/: motion_planner.cpp  motion_planner.hpp
prx_planning/prx/planning/motion_planners/anytime_rrt/: anytime_rrt.cpp
prx_planning/prx/planning/problem_specifications/: motion_planning_specification.cpp  motion_planning_specification.hpp  specification.cpp  specification.hpp
prx_planning/prx/planning/queries/: motion_planning_query.cpp  motion_planning_query.hpp  motion_query.cpp  motion_query.hpp
prx_planning/prx/planning/task_planners/: task_planner.cpp  task_planner.hpp
prx_planning/scripts/: case_evaluation.py  test_apc_queries.py
prx_sensing/prx_sensing/: CMakeLists.txt  CMakeLists.txt.bak  package.xml  sensing_plugin.xml
prx_sensing/prx_sensing/launch/: prx_sensing.launch
prx_sensing/prx_sensing/msg/: ObjectPose.msg
prx_sensing/prx_sensing/prx/: main.cpp  main.cpp.bak  prx_sensing.h  sensing_utilities.cpp
prx_sensing/prx_sensing/prx/ObjectDetect/: apc_object.cpp  apc_object.hpp  classifier.cpp
prx_sensing/prx_sensing/prx/ShelfDetect/: apc_shelf.cpp  apc_shelf.hpp
prx_sensing/prx_sensing/srv/: PublishObjectList.srv  SwitchCameras.srv  UpdateObjectList.srv  UpdateShelfPosition.srv
prx_simulation/: CMakeLists.txt  manifest.xml  package.xml  simulation_plugin.xml
prx_simulation/action/: send_trajectory.action
prx_simulation/msg/: frame_count_msg.msg  object_msg.msg  pabt_agent_msg.msg  pabt_node_msg.msg  world_config_msg.msg
prx_simulation/prx/: main.cpp  pabt_main.cpp
prx_simulation/prx/simulation/: plan.cpp  plan.hpp  trajectory.cpp  trajectory.hpp
prx_simulation/prx/simulation/applications/: application.cpp  application.hpp
prx_simulation/prx/simulation/collision_checking/: bullet_collision_checker.cpp  bullet_collision_checker.hpp  circle_collision_checker.cpp  circle_collision_checker.hpp  collision_checker.hpp  fcl_collision_checker.cpp  fcl_collision_checker.hpp  parallel_collision_checker.cpp  parallel_collision_checker.hpp  pqp_collision_checker.cpp  pqp_collision_checker.hpp  vector_collision_list.cpp
prx_simulation/prx/simulation/communication/: planning_comm.cpp  simulation_comm.cpp  simulation_comm.hpp  visualization_comm.cpp  visualization_comm.hpp
prx_simulation/prx/simulation/cost_functions/: baxter_end_effector_cost.cpp  baxter_end_effector_cost.hpp  cost_function.cpp  cost_function.hpp  default_uniform.cpp  distance_from_goal.cpp  distance_from_goal.hpp  duration_cost_function.cpp
prx_simulation/prx/simulation/sensing/: sensing_info.cpp  sensing_info.hpp  sensing_model.cpp  sensing_model.hpp  sensor.cpp  sensor.hpp
prx_simulation/prx/simulation/simulators/: bullet_simulator.cpp  bullet_simulator.hpp  default_simulator.cpp  default_simulator.hpp  simulator.cpp  simulator.hpp  uncertain_bullet_simulator.cpp  uncertain_bullet_simulator.hpp
prx_simulation/prx/simulation/systems/: obstacle.cpp  obstacle.hpp  system.cpp  system.hpp
prx_simulation/scripts/: UniGripperGraspValidator.py  reflex_commands.py  servo_device.py  unigripper_commands.py
prx_simulation/srv/: delegate_region_srv.srv  gripper_change_srv.srv  request_ground_truth_srv.srv  send_agent_srv.srv
prx_visualization/: manifest.xml  package.xml
prx_visualization/prx/: main.cpp
prx_visualization/prx/visualization/: scene.hpp  scene_comm.cpp  scene_comm.hpp  visualization_comm.cpp
(+3957 files in other folders)
